feat: improve swagger
