# server/src/auth/auth.controller.ts
@@ -1,5 +1,5 @@
 import { Body, Controller, HttpCode, HttpStatus, Post } from '@nestjs/common';
-import { ApiExtraModels, ApiTags } from '@nestjs/swagger';
+import { ApiTags } from '@nestjs/swagger';
 
 import { AuthService } from './auth.service';
 import { NewUserDTO } from '../user/dto/new-user.dto';
@@ -13,27 +13,26 @@ import {
 } from 'src/utils';
 
 @ApiTags('auth')
-@ApiExtraModels(UserDetail, LoginVo, VerifyJwtVo)
 @Controller('auth')
 @Public()
 export class AuthController {
   constructor(private authService: AuthService) {}
 
-  @ApiUnifiedCreatedResponse(UserDetail)
   @Post('register')
+  @ApiUnifiedCreatedResponse(UserDetail)
   register(@Body() user: NewUserDTO): Promise<UserDetail> {
     return this.authService.register(user);
   }
 
-  @ApiUnifiedOkResponse(LoginVo)
   @Post('login')
+  @ApiUnifiedOkResponse(LoginVo)
   @HttpCode(HttpStatus.OK)
   login(@Body() user: ExistingUserDTO): Promise<LoginVo> {
     return this.authService.login(user);
   }
 
-  @ApiUnifiedOkResponse(VerifyJwtVo)
   @Post('verify-jwt')
+  @ApiUnifiedOkResponse(VerifyJwtVo)
   @HttpCode(HttpStatus.OK)
   verifyJwt(@Body() payload: VerifyJwtDto): Promise<VerifyJwtVo> {
     return this.authService.verifyJwt(payload.jwt);
